# r-bpe

./: .gitignore  ARCHITECTURE.md  README.md  RECIPE.md  REFACTORING_SUMMARY.md  TOKENIZER_FUNCTIONALITY_CHECKLIST.md  TRAINING_GUIDE.md  build_rbpe_from_llama.py  demo_chat_template.py  demo_model_pattern.py  pyproject.toml  test_autotokenizer.py  test_comprehensive_tokenizer.py  test_encode_decode_cycle.py  test_full_workflow.py  test_hf.py  test_hf_ecosystem.py  test_python_bindings.py  test_rust_decode.py  test_vllm.py  training_config.yaml
rbpe-tokenizers/: Cargo.toml  MODEL_STRATEGY.md  PROGRESS.md  PYTHON_API.md  PYTHON_IMPLEMENTATION_ANALYSIS.md  QUICKSTART.md  generate_test_cases.py  pyproject.toml
rbpe-tokenizers/benches/: performance.rs
rbpe-tokenizers/examples/: advanced_decoder.rs  build_hf_tokenizer.rs  encode_decode.rs  fast_tokenizer_demo.rs  load_mappings.rs  performance_test.rs  python_demo.py
rbpe-tokenizers/src/: decoder.rs  fast_tokenizer.rs  hf_builder.rs  lib.rs  model.rs  normalizer.rs  pretokenizer.rs  python_bindings.rs  tokenizer.rs
rbpe-tokenizers/src/utils/: mappings.rs  mod.rs  unicode_ranges.rs
rbpe-tokenizers/tests/: integration_test.rs  python_parity_test.rs  python_reference_outputs.json
rbpe_tokenizer/: tokenization_rbpe.py
rbpe_tokenizer/metadata/: new_to_old_map.json  token_id_language_map.json  token_text_language_map.json
rbpe_tokenizer/new_tokenizer/: tokenizer_config.json
rbpe_tokenizer_hf/: arabic_normalization_map.json  config.json  new_to_old_map.json  old_to_new_map.json  tokenizer_config.json
rbpe_tokenizer_llama31/: special_tokens_map.json  tokenization_rbpe.py  tokenizer_config.json
rbpe_tokenizer_llama31/metadata/: old_to_new_map.json
src/rbpe/: __init__.py  mapping_tokenizer.py  rbpe_tokenizer.py  tokenization.py  tokenization_rbpe.py
test_rbpe_tokenizer/metadata/: old_to_new_map.json  replacement_character_map.json  (+1 more)
(+6 files in other folders)
