[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbpe"
version = "0.1.0"
description = "R-BPE: Improving BPE-Tokenizers with Token Reuse"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "transformers==4.49.0",
    "datasets==3.0.0",
    "pytest==8.3.4",
    "torch>=2.6.0",
    "tqdm==4.66.5",
    "click==7.0"
]

[project.scripts]
rbpe = "rbpe.cli:rbpe"

[tool.hatch.build.targets.wheel]
packages = ["src/rbpe"]

[tool.hatch.build.targets.wheel.force-include]
"src/rbpe/data" = "rbpe/data"