[package]
name = "rbpe-tokenizers"
version = "0.1.0"
edition = "2021"
authors = ["R-BPE Team"]
description = "Rust implementation of R-BPE (Reusable BPE) tokenizer"
license = "MIT"

[lib]
name = "rbpe_tokenizers"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokenizers = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12"
regex = "1.11"
thiserror = "2.0"
ahash = "0.8"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"
