[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rbpe-tokenizers"
version = "0.1.0"
description = "High-performance R-BPE tokenizer with Rust backend"
authors = [{name = "R-BPE Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "rbpe_tokenizers"
